[gd_scene load_steps=44 format=2]

[ext_resource path="res://main/ui/theme/main.theme" type="Theme" id=1]
[ext_resource path="res://main/ui/ui_screen/game_overlay/game_overlay_screen.gd" type="Script" id=2]
[ext_resource path="res://main/ui/ui_screen/game_overlay/controls/joystick/joystick.gd" type="Script" id=3]
[ext_resource path="res://main/ui/ui_screen/game_overlay/health_bar/health_bar.gd" type="Script" id=4]
[ext_resource path="res://main/ui/ui_screen/game_overlay/weapon_button/weapon_under1.png" type="Texture" id=5]
[ext_resource path="res://main/ui/ui_screen/game_overlay/controls/joystick/shoot_pressed.png" type="Texture" id=6]
[ext_resource path="res://main/ui/ui_screen/game_overlay/controls/joystick/inner_joystick.png" type="Texture" id=7]
[ext_resource path="res://main/ui/ui_screen/game_overlay/controls/joystick/joystick.png" type="Texture" id=8]
[ext_resource path="res://main/ui/ui_screen/game_overlay/controls/joystick/jump_unpressed.png" type="Texture" id=9]
[ext_resource path="res://main/ui/ui_screen/game_overlay/controls/joystick/shoot_unpressed.png" type="Texture" id=10]
[ext_resource path="res://main/ui/ui_screen/game_overlay/weapon_bar/weapon_progress.png" type="Texture" id=11]
[ext_resource path="res://main/ui/ui_screen/game_overlay/health_bar/health_progress.png" type="Texture" id=12]
[ext_resource path="res://main/ui/ui_screen/game_overlay/controls/joystick/jump_pressed.png" type="Texture" id=13]
[ext_resource path="res://main/ui/ui_screen/game_overlay/menu_button/pause_button1.png" type="Texture" id=14]
[ext_resource path="res://main/ui/ui_screen/game_overlay/menu_button/pause_button2.png" type="Texture" id=15]
[ext_resource path="res://main/ui/ui_screen/game_overlay/health_bar/health_under.png" type="Texture" id=16]
[ext_resource path="res://main/ui/ui_screen/game_overlay/score_label/score_label.png" type="Texture" id=17]
[ext_resource path="res://main/ui/theme/font/C&C Red Alert [INET].ttf" type="DynamicFontData" id=18]
[ext_resource path="res://main/ui/ui_screen/game_overlay/bone_count/bone_counter.gd" type="Script" id=19]
[ext_resource path="res://main/ui/ui_screen/game_overlay/score_label/score_label.gd" type="Script" id=20]
[ext_resource path="res://main/ui/ui_screen/level_select/level_info_container/icons/icon2.png" type="Texture" id=21]
[ext_resource path="res://main/ui/ui_screen/game_overlay/weapon_button/weapon_icon2.png" type="Texture" id=22]
[ext_resource path="res://main/ui/theme/sounds/ButtonSounds.tscn" type="PackedScene" id=23]
[ext_resource path="res://main/ui/theme/sounds/sound_button.gd" type="Script" id=24]
[ext_resource path="res://main/ui/ui_screen/game_overlay/weapon_bar/weapon_bar.gd" type="Script" id=25]
[ext_resource path="res://main/ui/ui_screen/game_overlay/weapon_button/weapon_icon1.png" type="Texture" id=26]
[ext_resource path="res://main/ui/ui_screen/game_overlay/weapon_button/weapon_icon3.png" type="Texture" id=27]
[ext_resource path="res://main/ui/ui_screen/game_overlay/weapon_button/weapon_switch_animation.png" type="Texture" id=28]
[ext_resource path="res://main/shader/unshaded_material.tres" type="Material" id=29]
[ext_resource path="res://main/world/random_sound_spawner/random_sound_spawner.gd" type="Script" id=30]
[ext_resource path="res://main/ui/ui_screen/game_overlay/weapon_button/channel_change.wav" type="AudioStream" id=31]
[ext_resource path="res://main/ui/ui_screen/game_overlay/time_label.gd" type="Script" id=32]
[ext_resource path="res://main/ui/ui_screen/game_overlay/bone_count/screen.png" type="Texture" id=33]
[ext_resource path="res://main/ui/ui_screen/level_select/level_info_container/icons/icon1.png" type="Texture" id=34]
[ext_resource path="res://main/ui/ui_screen/game_overlay/bone_count/screen2.png" type="Texture" id=35]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Animation" id=11]
length = 0.28
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.035, 0.07, 0.105, 0.14, 0.175, 0.21, 0.245, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("ChannelChangeSounds")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
} ]
}

[sub_resource type="DynamicFont" id=10]
size = 13
font_data = ExtResource( 18 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 30, 32 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 30, 32 )

[sub_resource type="CircleShape2D" id=3]
radius = 48.0

[sub_resource type="CircleShape2D" id=2]
radius = 36.0

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="GameOverlay" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_button_path = NodePath("VBoxContainer/TopRow/Menu")
button_control_path = NodePath("VBoxContainer/BotRow/ButtonControl")
joystick_control_path = NodePath("VBoxContainer/BotRow/JoystickControl")
weapon_button_path = NodePath("VBoxContainer/TopRow/StatusContainer/HBoxContainer/Control/WeaponButton")
time_label_path = NodePath("VBoxContainer/TopRow/TextureRect3/Label")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 892.0
margin_bottom = 472.0

[node name="TopRow" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 884.0
margin_bottom = 48.0
custom_constants/separation = 5

[node name="StatusContainer" type="PanelContainer" parent="VBoxContainer/TopRow"]
margin_right = 111.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 2
custom_styles/panel = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopRow/StatusContainer"]
margin_right = 111.0
margin_bottom = 48.0
custom_constants/separation = 0

[node name="Control" type="Control" parent="VBoxContainer/TopRow/StatusContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="HealthUnder" type="TextureRect" parent="VBoxContainer/TopRow/StatusContainer/HBoxContainer/Control"]
margin_left = 48.0
margin_top = 3.0
margin_right = 116.0
margin_bottom = 51.0
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponButton" type="TouchScreenButton" parent="VBoxContainer/TopRow/StatusContainer/HBoxContainer/Control"]
normal = ExtResource( 5 )

[node name="WeaponIcon" type="TextureRect" parent="VBoxContainer/TopRow/StatusContainer/HBoxContainer/Control"]
margin_right = 68.0
margin_bottom = 48.0
texture = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwitchAnimation" type="Sprite" parent="VBoxContainer/TopRow/StatusContainer/HBoxContainer/Control"]
material = ExtResource( 29 )
position = Vector2( 24, 22 )
texture = ExtResource( 28 )
hframes = 8
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/TopRow/StatusContainer/HBoxContainer/Control/SwitchAnimation"]
playback_speed = 1.5
anims/flash = SubResource( 11 )

[node name="ChannelChangeSounds" type="Node2D" parent="VBoxContainer/TopRow/StatusContainer/HBoxContainer/Control/SwitchAnimation"]
script = ExtResource( 30 )
sounds = [ ExtResource( 31 ) ]
volume = -18.0
rand_pitch_range = 0.2
positional = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TopRow/StatusContainer/HBoxContainer"]
margin_left = 48.0
margin_top = 9.0
margin_right = 111.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 39 )
size_flags_vertical = 8
custom_constants/separation = 2

[node name="HealthProgress" type="TextureProgress" parent="VBoxContainer/TopRow/StatusContainer/HBoxContainer/VBoxContainer"]
margin_right = 63.0
margin_bottom = 13.0
max_value = 9.0
value = 9.0
texture_progress = ExtResource( 12 )
script = ExtResource( 4 )

[node name="WeaponProgress" type="TextureProgress" parent="VBoxContainer/TopRow/StatusContainer/HBoxContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 63.0
margin_bottom = 28.0
max_value = 16.0
value = 15.0
texture_progress = ExtResource( 11 )
texture_progress_offset = Vector2( -1, 0 )
script = ExtResource( 25 )
icon_path = NodePath("../../Control/WeaponIcon")
flash_path = NodePath("../../Control/SwitchAnimation/AnimationPlayer")
weapon_icons = [ ExtResource( 26 ), ExtResource( 22 ), ExtResource( 27 ) ]
modulates = [ Color( 1, 1, 1, 1 ), Color( 0.882353, 0.976471, 1, 1 ), Color( 0.945098, 0.886275, 1, 1 ) ]

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TopRow"]
visible = false
margin_left = 732.0
margin_right = 753.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
size_flags_vertical = 0
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="VBoxContainer/TopRow/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -7.0
margin_right = 18.0
margin_bottom = 7.0
size_flags_vertical = 0
text = "000000"
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/TopRow"]
margin_left = 758.0
margin_right = 801.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
size_flags_vertical = 0
texture = ExtResource( 33 )

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/TopRow/TextureRect3"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -10.0
margin_right = 16.0
margin_bottom = 3.0
texture = ExtResource( 34 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/TopRow/TextureRect3"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 11.0
margin_top = -10.0
margin_right = 47.0
margin_bottom = 4.0
size_flags_vertical = 0
custom_colors/font_outline_modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
custom_fonts/font = SubResource( 10 )
text = "0:00"
align = 1
script = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="VBoxContainer/TopRow/TextureRect3/Label"]

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/TopRow"]
margin_left = 806.0
margin_right = 849.0
margin_bottom = 19.0
size_flags_vertical = 0
texture = ExtResource( 35 )

[node name="Label" type="Label" parent="VBoxContainer/TopRow/TextureRect2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -6.5
margin_right = 44.0
margin_bottom = 7.5
size_flags_vertical = 0
custom_colors/font_outline_modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TopRow/TextureRect2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -6.5
margin_right = 16.0
margin_bottom = 6.5
texture = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="VBoxContainer/TopRow"]
margin_left = 854.0
margin_right = 884.0
margin_bottom = 32.0
rect_min_size = Vector2( 30, 32 )
focus_mode = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
script = ExtResource( 24 )

[node name="ButtonSounds" parent="VBoxContainer/TopRow/Menu" instance=ExtResource( 23 )]

[node name="BotRow" type="HBoxContainer" parent="VBoxContainer"]
pause_mode = 1
margin_top = 395.0
margin_right = 884.0
margin_bottom = 464.0
size_flags_vertical = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoystickControl" type="Control" parent="VBoxContainer/BotRow"]
margin_top = 5.0
margin_right = 816.0
margin_bottom = 69.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Joystick" type="TouchScreenButton" parent="VBoxContainer/BotRow/JoystickControl"]
position = Vector2( 15, -16 )
normal = ExtResource( 8 )
shape = SubResource( 3 )
visibility_mode = 1
script = ExtResource( 3 )
offset = Vector2( 33, 33 )
inner_offset = Vector2( 17, 17 )
inner_resistance = 1.0

[node name="InnerJoystick" type="TouchScreenButton" parent="VBoxContainer/BotRow/JoystickControl/Joystick"]
position = Vector2( 17, 17 )
normal = ExtResource( 7 )
visibility_mode = 1

[node name="ButtonControl" type="Control" parent="VBoxContainer/BotRow"]
margin_left = 820.0
margin_right = 884.0
margin_bottom = 69.0
rect_min_size = Vector2( 64, 69 )
size_flags_horizontal = 9
size_flags_vertical = 8

[node name="JumpButton" type="TouchScreenButton" parent="VBoxContainer/BotRow/ButtonControl"]
position = Vector2( -44, 0 )
normal = ExtResource( 9 )
pressed = ExtResource( 13 )
shape = SubResource( 2 )
action = "jump"
visibility_mode = 1

[node name="ShootButton" type="TouchScreenButton" parent="VBoxContainer/BotRow/ButtonControl"]
position = Vector2( 26, -10 )
normal = ExtResource( 10 )
pressed = ExtResource( 6 )
shape = SubResource( 1 )
action = "primary_weapon"
visibility_mode = 1

[node name="JumpNormal" type="Position2D" parent="VBoxContainer/BotRow/ButtonControl"]

[node name="ShootNormal" type="Position2D" parent="VBoxContainer/BotRow/ButtonControl"]
position = Vector2( -38, -10 )

[node name="JumpSwap" type="Position2D" parent="VBoxContainer/BotRow/ButtonControl"]
position = Vector2( -44, 0 )

[node name="ShootSwap" type="Position2D" parent="VBoxContainer/BotRow/ButtonControl"]
position = Vector2( 26, -10 )

[node name="Tween" type="Tween" parent="."]
